--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,22 @@
         <module>bootcamp.user</module>
         <module>eureka-service</module>
     </modules>
+    <profiles>
+        <profile>
+            <!--profil de production a publier-->
+            <id>test</id>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <filtering>true</filtering>
+                    </resource>
+                    <resource>
+                        <directory>/home/devops/pag/release_2.0/scripts/home/config/dev</directory>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
