--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
             - "6082:6082"
         networks:
         - pag-net
+        - esnet
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
 
@@ -17,6 +18,7 @@ services:
             - "8081:8081"
         networks:
         - pag-net
+        - esnet
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     commentaire:
@@ -26,6 +28,7 @@ services:
             - "8083:8083"
         networks:
         - pag-net
+        - esnet
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     censure:
@@ -35,6 +38,7 @@ services:
         - "8089:8089"
         networks:
         - pag-net
+        - esnet
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     debat:
@@ -44,6 +48,7 @@ services:
         - "8088:8088"
         networks:
         - pag-net
+        - esnet
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     debatuc:
@@ -53,6 +58,7 @@ services:
         - "8095:8095"
         networks:
         - pag-net
+        - esnet
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     like:
@@ -62,6 +68,7 @@ services:
         - "8085:8085"
         networks:
         - pag-net
+        - esnet
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     media:
@@ -71,6 +78,7 @@ services:
         - "8086:8086"
         networks:
         - pag-net
+        - esnet
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     note:
@@ -80,6 +88,7 @@ services:
         - "8084:8084"
         networks:
         - pag-net
+        - esnet
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     notification:
@@ -89,6 +98,7 @@ services:
         - "8092:8092"
         networks:
         - pag-net
+        - esnet
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     preference:
@@ -98,6 +108,7 @@ services:
         - "8090:8090"
         networks:
         - pag-net
+        - esnet
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     programme:
@@ -107,6 +118,7 @@ services:
         - "8091:8091"
         networks:
         - pag-net
+        - esnet
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     sondage:
@@ -116,6 +128,7 @@ services:
         - "7087:7087"
         networks:
         - pag-net
+        - esnet
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     stats:
@@ -125,6 +138,7 @@ services:
         - "6093:6093"
         networks:
         - pag-net
+        - esnet
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     user:
@@ -134,6 +148,7 @@ services:
         - "6087:6087"
         networks:
         - pag-net
+        - esnet
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     gateway:
@@ -143,6 +158,7 @@ services:
             - "8761:8761"
         networks:
         - pag-net
+        - esnet
         links:
             - user:statistique.service.fonctionnel
             - stats:statistique.service.fonctionnel
@@ -177,4 +193,6 @@ services:
             - categorie
 networks:
     pag-net:
+        external: true
+    esnet:
         external: true
