--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,22 +159,22 @@ services:
         networks:
         - pag-net
         - esnet
-        links:
-            - user:statistique.service.fonctionnel
-            - stats:statistique.service.fonctionnel
-            - sondage:sondage.service.fonctionnel
-            - programme:programme.service.fonctionnel
-            - preference:preference.service.fonctionnel
-            - notification:notification.generator.services
-            - note:note.service.fonctionnel
-            - media:media.service.fonctionnel
-            - like:liketable.service.fonctionnel
-            - debatuc:debat.service.use.case
-            - debat:debat.service.fonctionnel
-            - censure:censure.service.fonctionnel
-            - commentaire:commentaire.service.fonctionnel
-            - projet:projet.service.fonctionnel
-            - categorie:categorie.service.fonctionnel
+#        links:
+#            - user:statistique.service.fonctionnel
+#            - stats:statistique.service.fonctionnel
+#            - sondage:sondage.service.fonctionnel
+#            - programme:programme.service.fonctionnel
+#            - preference:preference.service.fonctionnel
+#            - notification:notification.generator.services
+#            - note:note.service.fonctionnel
+#            - media:media.service.fonctionnel
+#            - like:liketable.service.fonctionnel
+#            - debatuc:debat.service.use.case
+#            - debat:debat.service.fonctionnel
+#            - censure:censure.service.fonctionnel
+#            - commentaire:commentaire.service.fonctionnel
+#            - projet:projet.service.fonctionnel
+#            - categorie:categorie.service.fonctionnel
         depends_on:
             - user
             - stats
