add host mode to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
 #        mem_limit: 1024M
         ports:
             - "6082:6082"
+        network_mode: "host"
         networks:
         - pag-net
         volumes :
@@ -15,6 +16,7 @@ services:
 #        mem_limit: 1024M
         ports:
             - "8081:8081"
+        network_mode: "host"
         networks:
         - pag-net
         volumes :
@@ -24,6 +26,7 @@ services:
 #        mem_limit: 1024M
         ports:
             - "8083:8083"
+        network_mode: "host"
         networks:
         - pag-net
         volumes :
@@ -33,6 +36,7 @@ services:
 #        mem_limit: 1024M
         ports:
         - "8089:8089"
+        network_mode: "host"
         networks:
         - pag-net
         volumes :
@@ -40,6 +44,7 @@ services:
     debat:
         build: debat.service.fonctionnel
 #        mem_limit: 1024M
+        network_mode: "host"
         ports:
         - "8088:8088"
         networks:
@@ -51,6 +56,7 @@ services:
 #        mem_limit: 1024M
         ports:
         - "8095:8095"
+        network_mode: "host"
         networks:
         - pag-net
         volumes :
@@ -60,8 +66,10 @@ services:
 #        mem_limit: 1024M
         ports:
         - "8085:8085"
+        network_mode: "host"
         networks:
         - pag-net
+        - host
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     media:
@@ -69,6 +77,7 @@ services:
 #        mem_limit: 1024M
         ports:
         - "8086:8086"
+        network_mode: "host"
         networks:
         - pag-net
         volumes :
@@ -78,6 +87,7 @@ services:
 #        mem_limit: 1024M
         ports:
         - "8084:8084"
+        network_mode: "host"
         networks:
         - pag-net
         volumes :
@@ -87,6 +97,7 @@ services:
 #        mem_limit: 1024M
         ports:
         - "8092:8092"
+        network_mode: "host"
         networks:
         - pag-net
         volumes :
@@ -96,6 +107,7 @@ services:
 #        mem_limit: 1024M
         ports:
         - "8090:8090"
+        network_mode: "host"
         networks:
         - pag-net
         volumes :
@@ -105,6 +117,7 @@ services:
 #        mem_limit: 1024M
         ports:
         - "8091:8091"
+        network_mode: "host"
         networks:
         - pag-net
         volumes :
@@ -114,6 +127,7 @@ services:
 #        mem_limit: 1024M
         ports:
         - "7087:7087"
+        network_mode: "host"
         networks:
         - pag-net
         volumes :
@@ -123,6 +137,7 @@ services:
 #        mem_limit: 1024M
         ports:
         - "6093:6093"
+        network_mode: "host"
         networks:
         - pag-net
         volumes :
@@ -132,6 +147,7 @@ services:
 #        mem_limit: 1024M
         ports:
         - "6087:6087"
+        network_mode: "host"
         networks:
         - pag-net
         volumes :
