--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,147 +11,147 @@ services:
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
 
-#    projet:
-#        build: projet.service.fonctionnel
-##        mem_limit: 1024M
-#        ports:
-#            - "8081:8081"
-#        network_mode: "host"
-##        networks:
-##        - pag-net
-#        volumes :
-#        - /home/devops/pag/release_2.0/scripts/home:/home
-#    commentaire:
-#        build: commentaire.service.fonctionnel
-##        mem_limit: 1024M
-#        ports:
-#            - "8083:8083"
-#        network_mode: "host"
-##        networks:
-##        - pag-net
-#        volumes :
-#        - /home/devops/pag/release_2.0/scripts/home:/home
-#    censure:
-#        build: censure.service.fonctionnel
-##        mem_limit: 1024M
-#        ports:
-#        - "8089:8089"
-#        network_mode: "host"
-##        networks:
-##        - pag-net
-#        volumes :
-#        - /home/devops/pag/release_2.0/scripts/home:/home
-#    debat:
-#        build: debat.service.fonctionnel
-##        mem_limit: 1024M
-#        network_mode: "host"
-#        ports:
-#        - "8088:8088"
-##        networks:
-##        - pag-net
-#        volumes :
-#        - /home/devops/pag/release_2.0/scripts/home:/home
-#    debatuc:
-#        build: debat.service.use.case
-##        mem_limit: 1024M
-#        ports:
-#        - "8095:8095"
-#        network_mode: "host"
-##        networks:
-##        - pag-net
-#        volumes :
-#        - /home/devops/pag/release_2.0/scripts/home:/home
-#    like:
-#        build: liketable.service.fonctionnel
-##        mem_limit: 1024M
-#        ports:
-#        - "8085:8085"
-#        network_mode: "host"
-##        networks:
-##        - pag-net
-##        - host
-#        volumes :
-#        - /home/devops/pag/release_2.0/scripts/home:/home
-#    media:
-#        build: media.service.fonctionnel
-##        mem_limit: 1024M
-#        ports:
-#        - "8086:8086"
-#        network_mode: "host"
-##        networks:
-##        - pag-net
-#        volumes :
-#        - /home/devops/pag/release_2.0/scripts/home:/home
-#    note:
-#        build: note.service.fonctionnel
-##        mem_limit: 1024M
-#        ports:
-#        - "8084:8084"
-#        network_mode: "host"
-##        networks:
-##        - pag-net
-#        volumes :
-#        - /home/devops/pag/release_2.0/scripts/home:/home
-#    notification:
-#        build: notification.generator.services
-##        mem_limit: 1024M
-#        ports:
-#        - "8092:8092"
-#        network_mode: "host"
-##        networks:
-##        - pag-net
-#        volumes :
-#        - /home/devops/pag/release_2.0/scripts/home:/home
-#    preference:
-#        build: preference.service.fonctionnel
-##        mem_limit: 1024M
-#        ports:
-#        - "8090:8090"
-#        network_mode: "host"
-##        networks:
-##        - pag-net
-#        volumes :
-#        - /home/devops/pag/release_2.0/scripts/home:/home
-#    programme:
-#        build: programme.service.fonctionnel
-##        mem_limit: 1024M
-#        ports:
-#        - "8091:8091"
-#        network_mode: "host"
-##        networks:
-##        - pag-net
-#        volumes :
-#        - /home/devops/pag/release_2.0/scripts/home:/home
-#    sondage:
-#        build: sondage.service.fonctionnel
-##        mem_limit: 1024M
-#        ports:
-#        - "7087:7087"
-#        network_mode: "host"
-##        networks:
-##        - pag-net
-#        volumes :
-#        - /home/devops/pag/release_2.0/scripts/home:/home
-#    stats:
-#        build: statistique.service.fonctionnel
-##        mem_limit: 1024M
-#        ports:
-#        - "6093:6093"
-#        network_mode: "host"
-##        networks:
-##        - pag-net
-#        volumes :
-#        - /home/devops/pag/release_2.0/scripts/home:/home
-#    user:
-#        build: bootcamp.user
-##        mem_limit: 1024M
-#        ports:
-#        - "6087:6087"
-#        network_mode: "host"
-##        networks:
-##        - pag-net
-#        volumes :
-#        - /home/devops/pag/release_2.0/scripts/home:/home
+    projet:
+        build: projet.service.fonctionnel
+        mem_limit: 1024M
+        ports:
+            - "8081:8081"
+        network_mode: "host"
+#        networks:
+#        - pag-net
+        volumes :
+        - /home/devops/pag/release_2.0/scripts/home:/home
+    commentaire:
+        build: commentaire.service.fonctionnel
+        mem_limit: 1024M
+        ports:
+            - "8083:8083"
+        network_mode: "host"
+#        networks:
+#        - pag-net
+        volumes :
+        - /home/devops/pag/release_2.0/scripts/home:/home
+    censure:
+        build: censure.service.fonctionnel
+        mem_limit: 1024M
+        ports:
+        - "8089:8089"
+        network_mode: "host"
+#        networks:
+#        - pag-net
+        volumes :
+        - /home/devops/pag/release_2.0/scripts/home:/home
+    debat:
+        build: debat.service.fonctionnel
+        mem_limit: 1024M
+        network_mode: "host"
+        ports:
+        - "8088:8088"
+#        networks:
+#        - pag-net
+        volumes :
+        - /home/devops/pag/release_2.0/scripts/home:/home
+    debatuc:
+        build: debat.service.use.case
+        mem_limit: 1024M
+        ports:
+        - "8095:8095"
+        network_mode: "host"
+#        networks:
+#        - pag-net
+        volumes :
+        - /home/devops/pag/release_2.0/scripts/home:/home
+    like:
+        build: liketable.service.fonctionnel
+        mem_limit: 1024M
+        ports:
+        - "8085:8085"
+        network_mode: "host"
+#        networks:
+#        - pag-net
+#        - host
+        volumes :
+        - /home/devops/pag/release_2.0/scripts/home:/home
+    media:
+        build: media.service.fonctionnel
+        mem_limit: 1024M
+        ports:
+        - "8086:8086"
+        network_mode: "host"
+#        networks:
+#        - pag-net
+        volumes :
+        - /home/devops/pag/release_2.0/scripts/home:/home
+    note:
+        build: note.service.fonctionnel
+        mem_limit: 1024M
+        ports:
+        - "8084:8084"
+        network_mode: "host"
+#        networks:
+#        - pag-net
+        volumes :
+        - /home/devops/pag/release_2.0/scripts/home:/home
+    notification:
+        build: notification.generator.services
+        mem_limit: 1024M
+        ports:
+        - "8092:8092"
+        network_mode: "host"
+#        networks:
+#        - pag-net
+        volumes :
+        - /home/devops/pag/release_2.0/scripts/home:/home
+    preference:
+        build: preference.service.fonctionnel
+        mem_limit: 1024M
+        ports:
+        - "8090:8090"
+        network_mode: "host"
+#        networks:
+#        - pag-net
+        volumes :
+        - /home/devops/pag/release_2.0/scripts/home:/home
+    programme:
+        build: programme.service.fonctionnel
+        mem_limit: 1024M
+        ports:
+        - "8091:8091"
+        network_mode: "host"
+#        networks:
+#        - pag-net
+        volumes :
+        - /home/devops/pag/release_2.0/scripts/home:/home
+    sondage:
+        build: sondage.service.fonctionnel
+        mem_limit: 1024M
+        ports:
+        - "7087:7087"
+        network_mode: "host"
+#        networks:
+#        - pag-net
+        volumes :
+        - /home/devops/pag/release_2.0/scripts/home:/home
+    stats:
+        build: statistique.service.fonctionnel
+        mem_limit: 1024M
+        ports:
+        - "6093:6093"
+        network_mode: "host"
+#        networks:
+#        - pag-net
+        volumes :
+        - /home/devops/pag/release_2.0/scripts/home:/home
+    user:
+        build: bootcamp.user
+        mem_limit: 1024M
+        ports:
+        - "6087:6087"
+        network_mode: "host"
+#        networks:
+#        - pag-net
+        volumes :
+        - /home/devops/pag/release_2.0/scripts/home:/home
 #    elastic:
 #        image: docker.elastic.co/elasticsearch/elasticsearch:6.3.1
 #        container_name: elastic
