--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
         ports:
             - "6082:6082"
         network_mode: "host"
-        networks:
-        - pag-net
+#        networks:
+#        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
 
