--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     categorie:
         build: categorie.service.fonctionnel
         mem_limit: 1024M
+        restart_policy:
+            condition: on-failure
         ports:
             - "6082:6082"
         network_mode: "host"
@@ -14,6 +16,8 @@ services:
     projet:
         build: projet.service.fonctionnel
         mem_limit: 1024M
+        restart_policy:
+            condition: on-failure
         ports:
             - "8081:8081"
         network_mode: "host"
@@ -21,9 +25,23 @@ services:
 #        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
+    projetuc:
+        build: projet.service.fonctionnel
+        mem_limit: 1024M
+        restart_policy:
+            condition: on-failure
+        ports:
+        - "9091:9091"
+        network_mode: "host"
+        #        networks:
+        #        - pag-net
+        volumes :
+        - /home/devops/pag/release_2.0/scripts/home:/home
     commentaire:
         build: commentaire.service.fonctionnel
         mem_limit: 1024M
+        restart_policy:
+            condition: on-failure
         ports:
             - "8083:8083"
         network_mode: "host"
@@ -34,6 +52,8 @@ services:
     censure:
         build: censure.service.fonctionnel
         mem_limit: 1024M
+        restart_policy:
+            condition: on-failure
         ports:
         - "8089:8089"
         network_mode: "host"
@@ -44,6 +64,8 @@ services:
     debat:
         build: debat.service.fonctionnel
         mem_limit: 1024M
+        restart_policy:
+            condition: on-failure
         network_mode: "host"
         ports:
         - "8088:8088"
@@ -54,6 +76,8 @@ services:
     debatuc:
         build: debat.service.use.case
         mem_limit: 1024M
+        restart_policy:
+            condition: on-failure
         ports:
         - "8095:8095"
         network_mode: "host"
@@ -64,6 +88,8 @@ services:
     like:
         build: liketable.service.fonctionnel
         mem_limit: 1024M
+        restart_policy:
+            condition: on-failure
         ports:
         - "8085:8085"
         network_mode: "host"
@@ -75,6 +101,8 @@ services:
     media:
         build: media.service.fonctionnel
         mem_limit: 1024M
+        restart_policy:
+            condition: on-failure
         ports:
         - "8086:8086"
         network_mode: "host"
@@ -86,6 +114,8 @@ services:
     note:
         build: note.service.fonctionnel
         mem_limit: 1024M
+        restart_policy:
+            condition: on-failure
         ports:
         - "8084:8084"
         network_mode: "host"
@@ -96,6 +126,8 @@ services:
     notification:
         build: notification.generator.services
         mem_limit: 1024M
+        restart_policy:
+            condition: on-failure
         ports:
         - "8092:8092"
         network_mode: "host"
@@ -106,6 +138,8 @@ services:
     preference:
         build: preference.service.fonctionnel
         mem_limit: 1024M
+        restart_policy:
+            condition: on-failure
         ports:
         - "8090:8090"
         network_mode: "host"
@@ -116,6 +150,8 @@ services:
     programme:
         build: programme.service.fonctionnel
         mem_limit: 1024M
+        restart_policy:
+            condition: on-failure
         ports:
         - "8091:8091"
         network_mode: "host"
@@ -126,6 +162,8 @@ services:
     sondage:
         build: sondage.service.fonctionnel
         mem_limit: 1024M
+        restart_policy:
+            condition: on-failure
         ports:
         - "7087:7087"
         network_mode: "host"
@@ -136,6 +174,8 @@ services:
     stats:
         build: statistique.service.fonctionnel
         mem_limit: 1024M
+        restart_policy:
+            condition: on-failure
         ports:
         - "6093:6093"
         network_mode: "host"
@@ -146,6 +186,8 @@ services:
     user:
         build: bootcamp.user
         mem_limit: 1024M
+        restart_policy:
+            condition: on-failure
         ports:
         - "6087:6087"
         network_mode: "host"
