--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         restart: on-failure
         ports:
             - "6082:6082"
-        network_mode: "host"
+#        network_mode: "host"
 #        networks:
 #        - pag-net
         volumes :
@@ -18,7 +18,7 @@ services:
         restart: on-failure
         ports:
             - "8081:8081"
-        network_mode: "host"
+#        network_mode: "host"
 #        networks:
 #        - pag-net
         volumes :
@@ -29,7 +29,7 @@ services:
         restart: on-failure
         ports:
         - "9091:9091"
-        network_mode: "host"
+#        network_mode: "host"
         #        networks:
         #        - pag-net
         volumes :
@@ -40,7 +40,7 @@ services:
         restart: on-failure
         ports:
             - "8083:8083"
-        network_mode: "host"
+#        network_mode: "host"
 #        networks:
 #        - pag-net
         volumes :
@@ -51,7 +51,7 @@ services:
         restart: on-failure
         ports:
         - "8089:8089"
-        network_mode: "host"
+#        network_mode: "host"
 #        networks:
 #        - pag-net
         volumes :
@@ -60,7 +60,7 @@ services:
         build: debat.service.fonctionnel
         mem_limit: 1024M
         restart: on-failure
-        network_mode: "host"
+#        network_mode: "host"
         ports:
         - "8088:8088"
 #        networks:
@@ -73,7 +73,7 @@ services:
         restart: on-failure
         ports:
         - "8095:8095"
-        network_mode: "host"
+#        network_mode: "host"
 #        networks:
 #        - pag-net
         volumes :
@@ -84,7 +84,7 @@ services:
         restart: on-failure
         ports:
         - "8085:8085"
-        network_mode: "host"
+#        network_mode: "host"
 #        networks:
 #        - pag-net
 #        - host
@@ -96,7 +96,7 @@ services:
         restart: on-failure
         ports:
         - "8086:8086"
-        network_mode: "host"
+#        network_mode: "host"
 #        networks:
 #        - pag-net
 #        - pag-net
@@ -108,7 +108,7 @@ services:
         restart: on-failure
         ports:
         - "8084:8084"
-        network_mode: "host"
+#        network_mode: "host"
 #        networks:
 #        - pag-net
         volumes :
@@ -119,7 +119,7 @@ services:
         restart: on-failure
         ports:
         - "8092:8092"
-        network_mode: "host"
+#        network_mode: "host"
 #        networks:
 #        - pag-net
         volumes :
@@ -130,7 +130,7 @@ services:
         restart: on-failure
         ports:
         - "8090:8090"
-        network_mode: "host"
+#        network_mode: "host"
 #        networks:
 #        - pag-net
         volumes :
@@ -141,7 +141,7 @@ services:
         restart: on-failure
         ports:
         - "8091:8091"
-        network_mode: "host"
+#        network_mode: "host"
 #        networks:
 #        - pag-net
         volumes :
@@ -152,7 +152,7 @@ services:
         restart: on-failure
         ports:
         - "7087:7087"
-        network_mode: "host"
+#        network_mode: "host"
 #        networks:
 #        - pag-net
         volumes :
@@ -163,7 +163,7 @@ services:
         restart: on-failure
         ports:
         - "6093:6093"
-        network_mode: "host"
+#        network_mode: "host"
 #        networks:
 #        - pag-net
         volumes :
@@ -174,7 +174,7 @@ services:
         restart: on-failure
         ports:
         - "6087:6087"
-        network_mode: "host"
+#        network_mode: "host"
 #        networks:
 #        - pag-net
         volumes :
